# BreezeAPI

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml
docs/: API.md
include/: breeze_api.h  hook_manager.h  js_engine.h  logger.h  symbol_resolver.h
src/: breeze_api.cpp  hook_manager.cpp  js_engine.cpp  logger.cpp  symbol_resolver.cpp
